tests/paczka1/fuzzy1/38014236.err
Error in line 2: wzzUp S773 84,2
Error in line 3: wzzUp A620 62,2
Error in line 29: pvFzhSvliFb A620 394,6
Error in line 40: wzzUp S623 -2,53
